@@ -5345,6 +5345,18 @@ operator|==
 name|timeTokenC
 condition|)
 block|{
+if|if
+condition|(
+name|pattern
+operator|->
+name|timeFormat
+operator|==
+name|QLatin1String
+argument_list|(
+literal|"process"
+argument_list|)
+condition|)
+block|{
 name|quint64
 name|ms
 init|=
@@ -5355,15 +5367,6 @@ operator|.
 name|elapsed
 argument_list|()
 decl_stmt|;
-if|if
-condition|(
-name|pattern
-operator|->
-name|timeFormat
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
 name|message
 operator|.
 name|append
@@ -5391,19 +5394,46 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
-else|else
+block|}
+elseif|else
+if|if
+condition|(
+name|pattern
+operator|->
+name|timeFormat
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
 name|message
 operator|.
 name|append
 argument_list|(
-name|pattern
-operator|->
-name|startTime
+name|QDateTime
+operator|::
+name|currentDateTime
+argument_list|()
 operator|.
-name|addMSecs
+name|toString
 argument_list|(
-name|ms
+name|Qt
+operator|::
+name|ISODate
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|message
+operator|.
+name|append
+argument_list|(
+name|QDateTime
+operator|::
+name|currentDateTime
+argument_list|()
 operator|.
 name|toString
 argument_list|(
@@ -5413,6 +5443,7 @@ name|timeFormat
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
 endif|#
 directive|endif
 block|}
@@ -6747,7 +6778,7 @@ begin_comment
 comment|/*!     \fn QtMsgHandler qInstallMsgHandler(QtMsgHandler handler)     \relates<QtGlobal>     \deprecated      Installs a Qt message \a handler which has been defined     previously. This method is deprecated, use qInstallMessageHandler     instead.     \sa QtMsgHandler, qInstallMessageHandler() */
 end_comment
 begin_comment
-comment|/*!     \fn void qSetMessagePattern(const QString&pattern)     \relates<QtGlobal>     \since 5.0      \brief Changes the output of the default message handler.      Allows to tweak the output of qDebug(), qWarning(), qCritical() and qFatal().      Following placeholders are supported:      \table     \header \li Placeholder \li Description     \row \li \c %{appname} \li QCoreApplication::applicationName()     \row \li \c %{category} \li Logging category     \row \li \c %{file} \li Path to source file     \row \li \c %{function} \li Function     \row \li \c %{line} \li Line in source file     \row \li \c %{message} \li The actual message     \row \li \c %{pid} \li QCoreApplication::applicationPid()     \row \li \c %{threadid} \li ID of current thread     \row \li \c %{type} \li "debug", "warning", "critical" or "fatal"     \row \li \c %{time} \li time of the message, in seconds since the process started     \row \li \c %{time format} \li system time when the message occurred, formatted by         passing the \c format to \l QDateTime::toString()     \row \li \c{%{backtrace [depth=N] [separator="..."]}} \li A backtrace with the number of frames         specified by the optional \c depth parameter (defaults to 5), and separated by the optional         \c separator parameter (defaults to "|").         This expansion is available only on some platforms (currently only platfoms using glibc).         Names are only known for exported functions. If you want to see the name of every function         in your application, use \c{QMAKE_LFLAGS += -rdynamic}.         When reading backtraces, take into account that frames might be missing due to inlining or         tail call optimization.     \endtable      You can also use conditionals on the type of the message using \c %{if-debug},     \c %{if-warning}, \c %{if-critical} or \c %{if-fatal} followed by an \c %{endif}.     What is inside the \c %{if-*} and \c %{endif} will only be printed if the type matches.      Finally, text inside \c %{if-category} ... \c %{endif} is only printed if the category     is not the default one.      Example:     \code     QT_MESSAGE_PATTERN="[%{time yyyyMMdd h:mm:ss.zzz t} %{if-debug}D%{endif}%{if-warning}W%{endif}%{if-critical}C%{endif}%{if-fatal}F%{endif}] %{file}:%{line} - %{message}"     \endcode      The default \a pattern is "%{if-category}%{category}: %{endif}%{message}".      The \a pattern can also be changed at runtime by setting the QT_MESSAGE_PATTERN     environment variable; if both \l qSetMessagePattern() is called and QT_MESSAGE_PATTERN is     set, the environment variable takes precedence.      Custom message handlers can use qFormatLogMessage() to take \a pattern into account.      \sa qInstallMessageHandler(), {Debugging Techniques}  */
+comment|/*!     \fn void qSetMessagePattern(const QString&pattern)     \relates<QtGlobal>     \since 5.0      \brief Changes the output of the default message handler.      Allows to tweak the output of qDebug(), qWarning(), qCritical() and qFatal().      Following placeholders are supported:      \table     \header \li Placeholder \li Description     \row \li \c %{appname} \li QCoreApplication::applicationName()     \row \li \c %{category} \li Logging category     \row \li \c %{file} \li Path to source file     \row \li \c %{function} \li Function     \row \li \c %{line} \li Line in source file     \row \li \c %{message} \li The actual message     \row \li \c %{pid} \li QCoreApplication::applicationPid()     \row \li \c %{threadid} \li ID of current thread     \row \li \c %{type} \li "debug", "warning", "critical" or "fatal"     \row \li \c %{time process} \li time of the message, in seconds since the process started (the token "process" is literal)     \row \li \c %{time [format]} \li system time when the message occurred, formatted by         passing the \c format to \l QDateTime::toString(). If the format is         not specified, the format of Qt::ISODate is used.     \row \li \c{%{backtrace [depth=N] [separator="..."]}} \li A backtrace with the number of frames         specified by the optional \c depth parameter (defaults to 5), and separated by the optional         \c separator parameter (defaults to "|").         This expansion is available only on some platforms (currently only platfoms using glibc).         Names are only known for exported functions. If you want to see the name of every function         in your application, use \c{QMAKE_LFLAGS += -rdynamic}.         When reading backtraces, take into account that frames might be missing due to inlining or         tail call optimization.     \endtable      You can also use conditionals on the type of the message using \c %{if-debug},     \c %{if-warning}, \c %{if-critical} or \c %{if-fatal} followed by an \c %{endif}.     What is inside the \c %{if-*} and \c %{endif} will only be printed if the type matches.      Finally, text inside \c %{if-category} ... \c %{endif} is only printed if the category     is not the default one.      Example:     \code     QT_MESSAGE_PATTERN="[%{time yyyyMMdd h:mm:ss.zzz t} %{if-debug}D%{endif}%{if-warning}W%{endif}%{if-critical}C%{endif}%{if-fatal}F%{endif}] %{file}:%{line} - %{message}"     \endcode      The default \a pattern is "%{if-category}%{category}: %{endif}%{message}".      The \a pattern can also be changed at runtime by setting the QT_MESSAGE_PATTERN     environment variable; if both \l qSetMessagePattern() is called and QT_MESSAGE_PATTERN is     set, the environment variable takes precedence.      Custom message handlers can use qFormatLogMessage() to take \a pattern into account.      \sa qInstallMessageHandler(), {Debugging Techniques}  */
 end_comment
 begin_function
 DECL|function|qInstallMessageHandler
